# Re-Craft-3DS

./: .clang-format  .gitignore  .gitmodules  .lite_project.lua  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md
.github/workflows/: build.yml
_MOVEBACKLATER/dataIO/dataInputStream/: DataInputStream.hpp
_MOVEBACKLATER/dataIO/dataOutputStream/: DataOutputStream.cpp
_MOVEBACKLATER/gui/: Screen.cpp  Screen.hpp
_MOVEBACKLATER/gui/ServerConnect/: ServerConnect.cpp  ServerConnect.hpp
_MOVEBACKLATER/gui/ServerList/: ServerList.cpp  ServerList.hpp  ServerPollingThread.cpp  ServerPollingThread.hpp
_MOVEBACKLATER/nbt/: CompressedStreamTools.cpp  CompressedStreamTools.hpp  NBTBase.cpp  NBTBase.hpp  NBTTagByte.cpp  NBTTagByte.hpp  NBTTagByteArray.cpp  NBTTagByteArray.hpp  NBTTagCompound.cpp  NBTTagCompound.hpp  NBTTagDouble.cpp  NBTTagDouble.hpp  NBTTagEnd.cpp  NBTTagEnd.hpp  NBTTagFloat.cpp  NBTTagFloat.hpp  NBTTagInt.cpp  NBTTagInt.hpp  NBTTagList.cpp  NBTTagList.hpp  NBTTagLong.cpp  NBTTagLong.hpp  NBTTagShort.cpp  NBTTagShort.hpp  NBTTagString.cpp  NBTTagString.hpp
_MOVEBACKLATER/packet/: Packet.cpp  Packet.hpp
_MOVEBACKLATER/packet/Packet0KeepAlive/: Packet0KeepAlive.cpp
_MOVEBACKLATER/packet/Packet255KickDisconnect/: Packet255KickDisconnect.hpp
_MOVEBACKLATER/packet/Packet2Handshake/: Packet2Handshake.hpp
_MOVEBACKLATER/packet/Packet3Chat/: Packet3Chat.hpp
_MOVEBACKLATER/serverStorage/: ServerNBTStorage.cpp  ServerNBTStorage.hpp
_MOVEBACKLATER/utils/keyboard/: keyboard.cpp  keyboard.hpp
_MOVEBACKLATER/utils/log/: LogManager.cpp  LogManager.hpp
_MOVEBACKLATER/utils/thread/: MiniThread.cpp  MiniThread.hpp
_bak/client/: Core.cpp  Core.h
_bak/client/gui/: ScreenManager.cpp  ScreenManager.h
app/: banner.cgfx  build-cia.rsf
back_mdb_ic/block/: BlockPartFace.hpp  BlockPartRotation.hpp  ModelBlock.hpp  ModelBlockDefinition.hpp  ModelRotation.hpp
back_mdb_src/block/: BlockFaceUV.cpp  BlockPart.cpp  BlockPartFace.cpp  ModelBakery.cpp  ModelBlock.cpp  ModelPool.cpp  ModelResourceLocation.cpp  Variant.cpp  VariantList.cpp
include/recraft/: GameStates.h  GameStates.hpp  ReCraftCore.h  ReCraftCore.hpp
include/recraft/block/: Block.hpp  BlockAir.hpp  BlockBed.hpp  BlockBookshelf.hpp  BlockBush.hpp  BlockChest.hpp  BlockColored.hpp  BlockCrops.hpp  BlockDeadBush.hpp  BlockDirt.hpp  BlockDispenser.hpp  BlockDoubleStoneSlab.hpp  BlockEvents.hpp  BlockFire.hpp  BlockFlower.hpp  BlockFurnace.hpp  BlockGlass.hpp  BlockGrass.h  BlockGrass.hpp  BlockGravel.hpp  BlockHalfStoneSlab.hpp  BlockLeaves.hpp  BlockLever.hpp  BlockMobSpawner.hpp  BlockMushroom.hpp  BlockNote.hpp  BlockObsidian.hpp  BlockOldLeaves.hpp  BlockOldLog.hpp  BlockOre.hpp  BlockPistonBase.hpp  BlockPistonExtension.hpp  BlockPistonMoving.hpp  BlockPlanks.hpp  BlockRailBase.hpp  BlockRailDetector.hpp  BlockRailPowered.hpp  BlockRedFlower.hpp  BlockRedstoneWire.hpp  BlockSand.hpp  (+20 more)
include/recraft/blocks/: Block.hpp  BlockEvents.h  BlockEvents.hpp  CT_Block.h  CT_Block.hpp  GrassBlock.h  LeavesBlock.h  WoolBlock.h
include/recraft/creativetab/: CreativeTab.hpp
include/recraft/entity/: Damage.h  Damage.hpp  Entity.hpp  Player.h  Player.hpp  PlayerController.h  PlayerController.hpp
include/recraft/gui/: CT_Inventory.h  CT_Inventory.hpp  DebugUI.h  DebugUI.hpp  FontLoader.hpp  Gui.h  Gui.hpp  GuiChat.h  GuiChat.hpp  ImGuiManager.h  ImGuiManager.hpp  Screen.hpp  ScreenFwd.hpp  SpriteBatch.h  SpriteBatch.hpp  WorldSelect.h  WorldSelect.hpp
include/recraft/input/: InputManager.hpp  InputSet.hpp  PadAngles.hpp  PlayerInput.hpp
include/recraft/inventory/: ItemStack.h  ItemStack.hpp
include/recraft/item/: EnumDyeColor.hpp  Item.hpp
include/recraft/mcbridge/: MCBridge.h  MCBridge.hpp
include/recraft/misc/: Collision.h  Collision.hpp  CommandLine.hpp  Crash.hpp  Raycast.h  (+8 more)
mockups/: template.ase  worldmenue.ase
romfs/shaders/: README.md  gui.shbin  lithium.shbin  world.shbin
server/: CMakeLists.txt  server.properties
source/: ReCraftCore.cpp  ReCraftCore.h  main.c  main.cpp
source/blocks/: Block.c  Block.h  BlockEvent.c  BlockEvents.h  CT_Block.c  Item.c  Item.h
source/client/: Core.cpp  Core.h
source/entity/: Damage.c  Damage.cpp  Damage.h  Player.c  Player.cpp  Player.h  PlayerController.c  PlayerController.cpp  PlayerController.h
source/gui/: CT_Inventory.cpp  CT_Inventory.h  DebugUI.c  DebugUI.cpp  DebugUI.h  FontLoader.c  FontLoader.cpp  FontLoader.h  Gui.c  Gui.h  Inventory.c  Inventory.h  Screen.cpp  Screen.hpp  SpriteBatch.c  SpriteBatch.cpp  SpriteBatch.h  WorldSelect.c  WorldSelect.h
source/imgui-impl/: imgui_impl_citro3d.h  imgui_impl_ctr.cpp  imgui_impl_ctr.h
source/inventory/: ItemStack.h
source/mclib/: mclib.h
source/misc/: Collision.c  Collision.h  CommandLine.cpp  CommandLine.h  Crash.c  Raycast.c  Raycast.h  Sound.c  Sound.cpp  Sound.h  VecMath.h
source/nbt/: CompressedStreamTools.cpp  CompressedStreamTools.hpp  NBTBase.cpp  NBTBase.hpp  NBTTagByte.cpp  NBTTagByte.hpp  NBTTagByteArray.cpp  NBTTagByteArray.hpp  NBTTagCompound.cpp  NBTTagCompound.hpp  NBTTagDouble.cpp  NBTTagDouble.hpp  NBTTagEnd.cpp  NBTTagEnd.hpp  NBTTagFloat.cpp  NBTTagFloat.hpp  NBTTagInt.cpp  NBTTagInt.hpp  NBTTagList.cpp  NBTTagList.hpp  NBTTagLong.cpp  NBTTagLong.hpp  NBTTagShort.cpp  NBTTagShort.hpp  NBTTagString.cpp  NBTTagString.hpp  ServerNBTStorage.cpp  ServerNBTStorage.hpp
source/packet/: Packet.cpp  Packet.hpp
source/recraft/: GameStates.h  ReCraftCore.cpp  ReCraftCore.h
source/rendering/: Camera.c  Camera.cpp  Camera.h  Clouds.c  Clouds.cpp  Clouds.h  Cursor.c  Cursor.cpp  Cursor.h  Hand.c  Hand.cpp  Hand.h  PolyGen.c  PolyGen.cpp  PolyGen.h  Renderer.c  Renderer.cpp  Renderer.h  TextureMap.c  TextureMap.cpp  VBOCache.c  VBOCache.cpp  VBOCache.h  VertexFmt.c  VertexFmt.h  WorldRenderer.c  WorldRenderer.cpp  WorldRenderer.h
source/serverStorage/: ServerNBTStorage.cpp  ServerNBTStorage.hpp
source/world/: CT_Chunk.c  CT_World.cpp  CT_World.h  Chunk.c  Chunk.h  ChunkWorker.c  ChunkWorker.cpp  ChunkWorker.h  WorkQueue.h  World.c  World.h
tools/: Toolchain.cmake  build.py
(+406 files in other folders)
